after completing pendings of hosting..

--- a/views/user/account/wallet.ejs
+++ b/views/user/account/wallet.ejs
@@ -16,5 +16,8 @@
         <div class="col-12 col-lg-4">
             <a class="btn btn-outline-primary btn-round w-100" href="/wallet?uid=<%= cookies.id %>" >Get the wallet</a>
         </div>
+        <div class="col-12 col-lg-4">
+            <a href="/coupons" class="btn btn-outline-primary btn-round w-100">Explore Coupon and Vouchers </a>
+        </div>
     </div>
     <% } %>
