--- a/public/assets/css/gasal.css
+++ b/public/assets/css/gasal.css
@@ -170,3 +170,19 @@
     padding: 0 5px;
     border-radius: 5px;
   }
+
+  .popup-message {
+    display: none;
+    position: fixed;
+    bottom: 20%;
+    color: green;
+    font-weight: 600;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #f0f0f0;
+    border: 2px solid #128700;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+  }
