--- a/views/user/account/orders.ejs
+++ b/views/user/account/orders.ejs
@@ -29,8 +29,7 @@
                                             </h6>
                                             <div style="display: flex;justify-content: space-between;">
                                                 <p>Quantity: <%= item.Quantity %> <br>
-                                                        Amount: $<%= item.Quantity * (item.Productid.Price -
-                                                            item.Productid.Discount) %>
+                                                        Amount: $<%= order.Totalamount %>
                                                 </p>
                                                 <a onclick="cancelOrderItem('<%= item._id %>', '<%= order._id %>')"
                                                     class="btn btn-dark">cancel
