--- a/views/user/vieworder.ejs
+++ b/views/user/vieworder.ejs
@@ -61,6 +61,9 @@
                 <h6 style="color: rgb(71, 88, 68);">Delivery Status: <span style="color: rgb(146, 146, 146);"><%= order.Status %></span></h6>
                 <h6 style="color: rgb(71, 88, 68);">Items count: <span style="color: rgb(146, 146, 146);"><%= order.Items.length %></span></h6>
                 <h6 style="color: rgb(71, 88, 68);">Total amount: <span style="color: rgb(146, 146, 146);">$<%= order.Totalamount %></span></h6>
+                <br>
+                <h6 style="color: #141b7b;"> <u>Payment Detail</u></h6>
+                <h6 style="color: rgb(71, 88, 68);">Payment methord: <span style="color: rgb(15, 184, 60);"><%= order.Items[0].Paymet %></span></h6>
             </div>
         </div>
     </div>
