--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -36,7 +36,7 @@
                     <a class="btn btn-outline-primary btn-round w-100">Add Money From Coupan </a>
                 </div>
                 <div class="col-12 col-lg-3">
-                    <a class="btn btn-outline-primary btn-round w-100">Explore Vouchers and Coupans </a>
+                    <a href="/coupons" class="btn btn-outline-primary btn-round w-100">Explore Vouchers and Coupans </a>
                 </div>
             </div>
             <!-- Transaction History -->
