--- a/views/user/wallet/addtowallet.ejs
+++ b/views/user/wallet/addtowallet.ejs
@@ -40,9 +40,30 @@
             method: 'post',
             data: $('#addmoneyform').serialize(),
             success: (async (response) => {
-                await alert("Money added successfully");
                 location.reload();
+                await showPopup("Money added successfully");
             })
         })
     }
+    function showPopup(message) {
+            // Create the popup element
+            var popup = document.createElement("div");
+            popup.className = "popup-message";
+            var popupContent = document.createTextNode(message);
+            popup.appendChild(popupContent);
+
+            // Append the popup to the body
+            document.body.appendChild(popup);
+
+            // Display the popup
+            popup.style.display = "block";
+
+            // Hide the popup after 3 seconds
+            setTimeout(function () {
+                popup.style.display = "none";
+                // Remove the popup from the DOM after hiding
+                location.reload()
+                document.body.removeChild(popup);
+            }, 2500);
+        }
 </script>
