--- a/views/admin/partials/sidebar.ejs
+++ b/views/admin/partials/sidebar.ejs
@@ -103,14 +103,14 @@
           <span class="menu-title">Coupons</span>
         </a>
       </li>
-      <!-- <li class="nav-item menu-items">
-        <a class="nav-link" href="documentation">
+      <li class="nav-item menu-items">
+        <a class="nav-link" href="/admin/brand">
           <span class="menu-icon">
             <i class="mdi mdi-file-document-box"></i>
           </span>
-          <span class="menu-title">Documentation</span>
+          <span class="menu-title">Brands</span>
         </a>
-      </li> -->
+      </li>
     </ul>
   </nav>
 
