--- a/views/admin/addproduct.ejs
+++ b/views/admin/addproduct.ejs
@@ -25,6 +25,15 @@
                 </select>
             </div>
             <div class="mb-3">
+                <label class="form-label">Brand</label>
+                <select name="brand" id="brand" class="form-control" required>
+                    <option value="">Select from Brands</option>
+                    <% brands.map((brand)=>{ %>
+                        <option value="<%= brand._id %>"><%= brand.Brandname %></option>
+                    <% }) %>
+                </select>
+            </div>
+            <div class="mb-3">
                 <label class="form-label">Sub Categories</label>
                 <input name="subcategory" id="subcategory" class="form-control" required>
             </div>
