--- a/views/user/head.ejs
+++ b/views/user/head.ejs
@@ -41,6 +41,8 @@
     <script src="assets/js/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css" />
     <script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
+    <!-- gasal.js -->
+    <script src="assets/js/gasal.js"></script>
 </head>
 
 <body>
