--- a/views/user/shopepage.ejs
+++ b/views/user/shopepage.ejs
@@ -235,6 +235,35 @@
 
                             <div class="widget widget-collapsible">
                                 <h3 class="widget-title">
+                                    <a data-toggle="collapse" href="#widget-1" role="button" aria-expanded="true"
+                                        aria-controls="widget-1">
+                                        Brands
+                                    </a>
+                                </h3><!-- End .widget-title -->
+
+                                <div class="collapse show" id="widget-1">
+                                    <div class="widget-body">
+                                        <div class="filter-items filter-items-count">
+                                            <% brandData.map((brand)=>{ %>
+                                                <div class="filter-item">
+                                                    <div class="custom-control custom-checkbox">
+                                                        <input type="checkbox" class="custom-control-input"
+                                                            id="br-<%= brand.Brandname %>"
+                                                            name="<%= brand.Brandname %>">
+                                                        <label class="custom-control-label"
+                                                            for="br-<%= brand.Brandname %>">
+                                                            <%= brand.Brandname %>
+                                                        </label>
+                                                    </div><!-- End .custom-checkbox -->
+                                                </div><!-- End .filter-item -->
+                                                <% }) %>
+                                        </div><!-- End .filter-items -->
+                                    </div><!-- End .widget-body -->
+                                </div><!-- End .collapse -->
+                            </div><!-- End .widget -->
+
+                            <div class="widget widget-collapsible">
+                                <h3 class="widget-title">
                                     <a data-toggle="collapse" href="#widget-5" role="button" aria-expanded="true"
                                         aria-controls="widget-5">
                                         Price
@@ -332,8 +361,12 @@
             const selectedCategories = Array.from(document.querySelectorAll('input[type=checkbox][id^="cat-"]:checked'))
                 .map(category => category.name);
 
+            const selectedBrands = Array.from(document.querySelectorAll('input[type=checkbox][id^="br-"]:checked'))
+                .map(brand => brand.name);
+
             const categoriesQueryParam = selectedCategories.join(',');
-            window.location.href = `/shope?categories=${categoriesQueryParam}&min=${min}&max=${max}&page=${page}&limit=${8}`
+            const brandsQueryParam = selectedBrands.join(',');
+            window.location.href = `/shope?categories=${categoriesQueryParam}&brands=${brandsQueryParam}&min=${min}&max=${max}&page=${page}&limit=${8}`
         }
     </script>
     <!-- SEARCHING SCRIPT -->
